log
Wed 20 Mar 2024 08:44:41 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:40: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |     List* elemento = malloc(1 * sizeof(List));
      |                                        ^~~~
exercises.c:47:11: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |     List* elemento = malloc(1 * sizeof(List));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
27d2dbb
Wed 20 Mar 2024 08:46:00 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:40: error: invalid application of ‘sizeof’ to incomplete type ‘List’
   47 |     List* elemento = malloc(1 * sizeof(List));
      |                                        ^~~~
exercises.c:47:11: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |     List* elemento = malloc(1 * sizeof(List));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
112282d
Wed 20 Mar 2024 08:48:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: unused variable ‘elemento’ [-Werror=unused-variable]
   47 |     int* elemento = malloc(1 * sizeof(int));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d5fc8c6
Wed 20 Mar 2024 08:49:44 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
0873fca
Wed 20 Mar 2024 08:50:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
dfec0eb
